--- a/02_text_classification_sklearn/03_sklearn_text_classification.ipynb
+++ b/02_text_classification_sklearn/03_sklearn_text_classification.ipynb
@@ -91,6 +91,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2257"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(twenty_train.data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -207,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +236,7 @@
        "(2257, 5000)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -314,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -366,18 +386,6 @@
     "# Accuracy\n",
     "from sklearn.metrics import accuracy_score\n",
     "print('Accuracy test: ', accuracy_score(twenty_test.target, predicted))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Score 2 new docs.\n",
-    "# Define a function score\n",
-    "docs_new = ['God is love', 'OpenGL on the GPU is fast']\n",
-    "\n"
    ]
   },
   {
