--- a/03_word_representations_gensim/03_gensim_word2vect.ipynb
+++ b/03_word_representations_gensim/03_gensim_word2vect.ipynb
@@ -364,7 +364,8 @@
     "import spacy\n",
     "\n",
     "# Load a model with embedings . The small models don't have embedings\n",
-    "nlp = spacy.load('en_core_web_md') # Medium size model. More time to load...\n",
+    "import en_core_web_md\n",
+    "nlp = en_core_web_sm.load()\n",
     "print('Model loaded!')"
    ]
   },
