--- a/02_text_classification_sklearn/04_sklearn_text_classification_pipelines.ipynb
+++ b/02_text_classification_sklearn/04_sklearn_text_classification_pipelines.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sklearn version: 0.19.1\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "\n",
@@ -27,10 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
